k8s-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: volley-dev
  labels:
    app: volley
