k8s-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volley
  namespace: volley-dev
  labels:
    app: volley
spec:
  selector:
    app: volley
  ports:
    - name: http
      port: 80
      targetPort: 5173
      protocol: TCP
      appProtocol: http
