k8s-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volley-ingress
  namespace: volley-dev
  labels:
    app: volley
  annotations:
    # <namespace>-<name>@kubernetescrd, see middleware.yaml.
    traefik.ingress.kubernetes.io/router.middlewares: volley-dev-compress@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - volley-dev.bevsoft.com
      secretName: volley-dev-tls
  rules:
    # HMR websockets share this host and port, which Traefik proxies as-is.
    - host: volley-dev.bevsoft.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volley
                port:
                  number: 80
